# langcore-litellm

./: CHANGELOG.md  README.md  conftest.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
langcore_litellm/: __init__.py  provider.py
tests/: test_async_infer.py  test_cache_bypass.py  test_model_id.py  test_plugin.py  test_usage_tracking.py
